A ready-made solution The problem was removing an object from a list with a fixed number of items